--- a/roles/office/tasks/main.yml
+++ b/roles/office/tasks/main.yml
@@ -62,6 +62,20 @@
     name: texlive-latexextra
     state: present
 
+- name: Install visidata
+  aur:
+    name: visidata
+    user: "{{ user.name }}"
+  tags:
+    - aur
+
+- name: Install additional libraries for visidata
+  pacman:
+    name:
+      - python-xlrd
+      - python-pandas
+    state: present
+
 - name: Install qalculate
   pacman:
     name: qalculate-gtk
@@ -80,10 +94,3 @@
   pacman:
     name: gnuplot
     state: present
-
-- name: Install xsv
-  aur:
-    name: xsv
-    user: "{{ user.name }}"
-  tags:
-    - aur
