--- a/roles/pdf/tasks/main.yml
+++ b/roles/pdf/tasks/main.yml
@@ -71,6 +71,8 @@
   aur:
     name:
       - python-pdfminer.six
+      - python-pikepdf
+      - python-ruffus
       - ocrmypdf
     user: "{{ user.name }}"
   tags:
