--- a/roles/cups/tasks/main.yml
+++ b/roles/cups/tasks/main.yml
@@ -8,6 +8,7 @@
       - cups-pdf
       - gutenprint
       - hplip
+      - gtk3-print-backends
     state: present
 
 - name: Add a print admin group
