--- a/roles/spell/tasks/main.yml
+++ b/roles/spell/tasks/main.yml
@@ -4,6 +4,7 @@
     name:
       - hunspell
       - hunspell-en_US
+      - hunspell-de_DE
     state: present
   tags:
     - hunspell
@@ -13,6 +14,7 @@
     name:
       - aspell
       - aspell-en
+      - aspell-de
     state: present
   tags:
     - aspell
