--- a/playbook.yml
+++ b/playbook.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   become: yes
   roles:
-   # - { role: base, tags: ['base'] }
+    - { role: base, tags: ['base'] }
     - { role: gnupg, tags: ['gnupg'] }
     - { role: cron, tags: ['cron'] }
     - { role: microcode, tags: ['microcode'], when: "'GenuineIntel' in ansible_processor" }
@@ -14,7 +14,7 @@
     - { role: x, tags: ['x'] }
    # - { role: lightdm, tags: ['lightdm'], when: "display_manager == 'lightdm'" }
    # - { role: gdm, tags: ['gdm'], when: "display_manager == 'gdm'" }
-   # - { role: i3, tags: ['i3'], when: "desktop_environment == 'i3'" }
+    - { role: i3, tags: ['i3'], when: "desktop_environment == 'i3'" }
    # - { role: gnome, tags: ['gnome'], when: "desktop_environment == 'gnome'" }
     - { role: pass, tags: ['pass'] }
     - { role: iptables, tags: ['iptables'] }
@@ -41,35 +41,35 @@
     - { role: pianobar, tags: ['pianobar'] }
     - { role: laptop, tags: ['laptop'] }
     - { role: thinkpad, tags: ['thinkpad'], when: "'ThinkPad' in ansible_product_version" }
-   # - { role: macbook, tags: ['macbook'], when: "'MacBook' in ansible_product_name" }
+      # - { role: macbook, tags: ['macbook'], when: "'MacBook' in ansible_product_name" }
     - { role: screensaver, tags: ['screensaver'] }
     - { role: bitlbee, tags: ['bitlbee'] }
     - { role: weechat, tags: ['weechat'] }
     - { role: git-annex, tags: ['git-annex'], when: "gitannex is defined" }
     - { role: taskwarrior, tags: ['taskwarrior'] }
-   # - { role: ledger, tags: ['ledger'] }
+      #- { role: ledger, tags: ['ledger'] }
     - { role: mail, tags: ['mail'] }
-    - { role: cups, tags: ['cups'] }
+      #  - { role: cups, tags: ['cups'] }
     - { role: office, tags: ['office'] }
     - { role: visidata, tags: ['visidata'] }
     - { role: pdf, tags: ['pdf'] }
     - { role: dictd, tags: ['dictd'] }
     - { role: redshift, tags: ['redshift'] }
     - { role: rtorrent, tags: ['rtorrent'] }
-   # - { role: virtualbox, tags: ['virtualbox'] }
-    - { role: hashicorp, tags: ['hashicorp'] }
+      # - { role: virtualbox, tags: ['virtualbox'] }
+      #- { role: hashicorp, tags: ['hashicorp'] }
     - { role: virtualenv, tags: ['virtualenv'] }
     - { role: backitup, tags: ['backitup'] }
-    #- { role: cryptshot, tags: ['cryptshot'], when: "cryptshot is defined" }
-    - { role: borg, tags: ['borg'] }
-    - { role: tarsnap, tags: ['tarsnap'] }
+      #- { role: cryptshot, tags: ['cryptshot'], when: "cryptshot is defined" }
+      #    - { role: borg, tags: ['borg'] }
+      # - { role: tarsnap, tags: ['tarsnap'] }
     - { role: mapping, tags: ['mapping'] }
-    - { role: sound, tags: ['sound'] }
+      #- { role: sound, tags: ['sound'] }
     - { role: pim, tags: ['pim'] }
-    - { role: radio, tags: ['radio'] }
-    - { role: postgresql, tags: ['postgresql'] }
+      # - { role: radio, tags: ['radio'] }
+      #  - { role: postgresql, tags: ['postgresql'] }
     - { role: calibre, tags: ['calibre'] }
-    - { role: aws, tags: ['aws'] }
+      # - { role: aws, tags: ['aws'] }
     - { role: parcimonie, tags: ['parcimonie'], when: "tor is defined" }
     - { role: localtime, tags: ['localtime'], when: "localtime is defined" }
     - { role: wormhole, tags: ['wormhole'] }
@@ -78,11 +78,11 @@
     - { role: hostsctl, tags: ['hostsctl'], when: "hostsctl is defined" }
     - { role: himawaripy, tags: ['himawaripy'], when: "himawaripy is defined" }
     - { role: goesimage, tags: ['goesimage'], when: "goesimage is defined" }
-    - { role: syncthing, tags: ['syncthing'], when: "syncthing is defined" }
-    - { role: mirrorlist, tags: ['mirrorlist'], when: "mirrorlist is defined" }
-    - { role: pkgfile, tags: ['pkgfile'], when: "pkgfile is defined" }
+      #  - { role: syncthing, tags: ['syncthing'], when: "syncthing is defined" }
+      #  - { role: mirrorlist, tags: ['mirrorlist'], when: "mirrorlist is defined" }
+      #  - { role: pkgfile, tags: ['pkgfile'], when: "pkgfile is defined" }
     - { role: units, tags: ['units'], when: "units is defined" }
-   # - { role: logitech, tags: ['logitech'] }
+      # - { role: logitech, tags: ['logitech'] }
     - { role: pydev, tags: ['pydev'] }
     - { role: aria2, tags: ['aria2'] }
     - { role: signal, tags: ['signal'] }
