--- a/roles/ssd/tasks/main.yml
+++ b/roles/ssd/tasks/main.yml
@@ -1,12 +1,14 @@
 ---
-- name: Install hdparm
-  pacman: name=hdparm state=present
-
-- name: Check for TRIM support
-  shell: "hdparm -I /dev/nvme0n1 | grep TRIM"
-  register: hdparm
-  ignore_errors: True
+#- name: Install hdparm
+#  pacman: name=hdparm state=present
+#  register: hdparm
+#
+##### not working for nvme ssds ####
+###- name: Check for TRIM support
+###  shell: "hdparm -I /dev/nvme0n1 | grep TRIM"
+###  register: hdparm
+###  ignore_errors: True
 
 - name: Enable and start weekly filesystem TRIM timer
   service: name=fstrim.timer enabled=yes state=started
-  when: "hdparm.rc == 0"
+  #when: "hdparm.rc == 0"
