--- a/roles/laptop/files/tlp.conf
+++ b/roles/laptop/files/tlp.conf
@@ -327,7 +327,7 @@ RUNTIME_PM_DRIVER_BLACKLIST="amdgpu mei_me nouveau pcieport radeon"
 # Note: input devices (usbhid) are excluded automatically
 # Default: <none>
 
-#USB_BLACKLIST="1111:2222 3333:4444"
+#USB_BLACKLIST="1050:0407"
 
 # Bluetooth devices are excluded from USB autosuspend:
 #   0=do not exclude, 1=exclude.
