adding i3blocks git module repo

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -13,6 +13,7 @@
   shell: echo "blacklist pcspkr" > /etc/modprobe.d/nobeep.conf
   args:
     executable: /bin/bash
+#  create: true
 
 - name: copy mkinitcpio thinkpad config
   copy: src=mkinitcpio dest=/etc/mkinitcpio.conf
