tuning nad ppd for oki

--- a/roles/i3/tasks/main.yml
+++ b/roles/i3/tasks/main.yml
@@ -5,7 +5,7 @@
       - i3-gaps
       - i3blocks
       - i3lock
-      - i3status
+      #- i3status
     state: present
 
 - name: install i3blocks modules
