--- a/roles/laptop/files/tlp.conf
+++ b/roles/laptop/files/tlp.conf
@@ -223,7 +223,7 @@ DISK_DEVICES="nvme0n1 nvme1n1"
 # (*) keeps BIOS ASPM defaults (recommended)
 # Default: <none>
 
-PCIE_ASPM_ON_AC=perfomrance
+PCIE_ASPM_ON_AC=performance
 PCIE_ASPM_ON_BAT=powersave
 
 # Set the min/max/turbo frequency for the Intel GPU.
@@ -315,7 +315,7 @@ PCIE_ASPM_ON_BAT=powersave
 # Default: "amdgpu mei_me nouveau nvidia pcieport radeon", use "" to disable
 # completely.
 
-RUNTIME_PM_DRIVER_BLACKLIST="amdgpu mei_me nouveau pcieport radeon"
+RUNTIME_PM_DRIVER_BLACKLIST="amdgpu mei_me pcieport radeon"
 
 # Set to 0 to disable, 1 to enable USB autosuspend feature.
 # Default: 1
@@ -422,14 +422,14 @@ RUNTIME_PM_DRIVER_BLACKLIST="amdgpu mei_me nouveau pcieport radeon"
 # Main / Internal battery (values in %)
 # Default: <none>
 
-START_CHARGE_THRESH_BAT0=75
-STOP_CHARGE_THRESH_BAT0=80
+START_CHARGE_THRESH_BAT0=80
+STOP_CHARGE_THRESH_BAT0=85
 
 # Ultrabay / Slice / Replaceable battery (values in %)
 # Default: <none>
 
-START_CHARGE_THRESH_BAT1=75
-STOP_CHARGE_THRESH_BAT1=80
+START_CHARGE_THRESH_BAT1=80
+STOP_CHARGE_THRESH_BAT1=85
 
 # Restore charge thresholds when AC is unplugged: 0=disable, 1=enable.
 # Default: 0
@@ -452,7 +452,7 @@ TPSMAPI_ENABLE=0
 
 # Radio devices to disable on connect.
 
-DEVICES_TO_DISABLE_ON_LAN_CONNECT="wifi wwan"
+#DEVICES_TO_DISABLE_ON_LAN_CONNECT="wifi wwan"
 #DEVICES_TO_DISABLE_ON_WIFI_CONNECT="wwan"
 #DEVICES_TO_DISABLE_ON_WWAN_CONNECT="wifi"
 
