--- a/playbook.yml
+++ b/playbook.yml
@@ -57,17 +57,17 @@
     - { role: redshift, tags: ['redshift'] }
     - { role: rtorrent, tags: ['rtorrent'] }
       # - { role: virtualbox, tags: ['virtualbox'] }
-      #- { role: hashicorp, tags: ['hashicorp'] }
+      # - { role: hashicorp, tags: ['hashicorp'] }
     - { role: virtualenv, tags: ['virtualenv'] }
     - { role: backitup, tags: ['backitup'] }
-      #- { role: cryptshot, tags: ['cryptshot'], when: "cryptshot is defined" }
-      #    - { role: borg, tags: ['borg'] }
+      # - { role: cryptshot, tags: ['cryptshot'], when: "cryptshot is defined" }
+      # - { role: borg, tags: ['borg'] }
       # - { role: tarsnap, tags: ['tarsnap'] }
     - { role: mapping, tags: ['mapping'] }
       #- { role: sound, tags: ['sound'] }
     - { role: pim, tags: ['pim'] }
-      # - { role: radio, tags: ['radio'] }
-      #  - { role: postgresql, tags: ['postgresql'] }
+    - { role: radio, tags: ['radio'] }
+      # - { role: postgresql, tags: ['postgresql'] }
     - { role: calibre, tags: ['calibre'] }
       # - { role: aws, tags: ['aws'] }
     - { role: parcimonie, tags: ['parcimonie'], when: "tor is defined" }
