--- a/playbook.yml
+++ b/playbook.yml
@@ -66,7 +66,7 @@
     - { role: mapping, tags: ['mapping'] }
       #- { role: sound, tags: ['sound'] }
     - { role: pim, tags: ['pim'] }
-    - { role: radio, tags: ['radio'] }
+    #- { role: radio, tags: ['radio'] }
       # - { role: postgresql, tags: ['postgresql'] }
     - { role: calibre, tags: ['calibre'] }
       # - { role: aws, tags: ['aws'] }
