--- a/roles/radio/tasks/main.yml
+++ b/roles/radio/tasks/main.yml
@@ -9,6 +9,6 @@
     name: hamlib
     state: present
 
-- include: rtl-sdr.yml
+#- include: rtl-sdr.yml
 - include: radio_mgmt.yml
 - include: radio_ops.yml
