adding recent changes from pigmonkey repo manual

--- a/playbook.yml
+++ b/playbook.yml
@@ -30,7 +30,7 @@
     - { role: editors, tags: ['editors'] }
     - { role: filesystems, tags: ['filesystems'] }
     - { role: archive, tags: ['archive'] }
-    - { role: optical, tags: ['optical'] }
+    #- { role: optical, tags: ['optical'] }
     - { role: udisks, tags: ['udisks'] }
     - { role: spell, tags: ['spell'] }
     - { role: browsers, tags: ['browsers'] }
@@ -43,15 +43,15 @@
     - { role: thinkpad, tags: ['thinkpad'], when: "'ThinkPad' in ansible_product_version" }
       # - { role: macbook, tags: ['macbook'], when: "'MacBook' in ansible_product_name" }
     - { role: screensaver, tags: ['screensaver'] }
-    - { role: bitlbee, tags: ['bitlbee'] }
-    - { role: weechat, tags: ['weechat'] }
-    - { role: git-annex, tags: ['git-annex'], when: "gitannex is defined" }
-    - { role: taskwarrior, tags: ['taskwarrior'] }
+    #- { role: bitlbee, tags: ['bitlbee'] }
+    #- { role: weechat, tags: ['weechat'] }
+    #- { role: git-annex, tags: ['git-annex'], when: "gitannex is defined" }
+    #- { role: taskwarrior, tags: ['taskwarrior'] }
       #- { role: ledger, tags: ['ledger'] }
-    - { role: mail, tags: ['mail'] }
+    #- { role: mail, tags: ['mail'] }
       #  - { role: cups, tags: ['cups'] }
     - { role: office, tags: ['office'] }
-    - { role: visidata, tags: ['visidata'] }
+    #- { role: visidata, tags: ['visidata'] }
     - { role: pdf, tags: ['pdf'] }
     - { role: dictd, tags: ['dictd'] }
     - { role: redshift, tags: ['redshift'] }
