--- a/roles/browsers/tasks/main.yml
+++ b/roles/browsers/tasks/main.yml
@@ -78,18 +78,16 @@
     - chromium
 
 - name: Install tor-browser
-  aur:
-    name: tor-browser
-    user: "{{ user.name }}"
-    skip_pgp: yes
+  pacman:
+    name: torbrowser-launcher
+    state: present
   tags:
     - tor-browser
-    - aur
 
 - name: Jail tor-browser
   file:
     src: /usr/bin/firejail
-    dest: /usr/local/bin/tor-browser
+    dest: /usr/local/bin/torbrowser-launcher
     state: link
   tags:
     - tor-browser
