--- a/roles/media/tasks/feh.yml
+++ b/roles/media/tasks/feh.yml
@@ -12,10 +12,10 @@
     - feh
     - firejail
 
-- name: Install imlib2-heic
-  aur:
-    name: imlib2-heic
-    user: "{{ user.name }}"
-  tags:
-    - aur
-    - feh
+#- name: Install imlib2-heic
+#  aur:
+#    name: imlib2-heic
+#    user: "{{ user.name }}"
+#  tags:
+#    - aur
+#    - feh
