--- a/playbook.yml
+++ b/playbook.yml
@@ -76,7 +76,7 @@
     - { role: bluetooth, tags: ['bluetooth'], when: "bluetooth is defined" }
     - { role: wttr, tags: ['wttr'] }
     - { role: hostsctl, tags: ['hostsctl'], when: "hostsctl is defined" }
-    - { role: himawaripy, tags: ['himawaripy'], when: "himawaripy is defined" }
+    #- { role: himawaripy, tags: ['himawaripy'], when: "himawaripy is defined" }
     - { role: goesimage, tags: ['goesimage'], when: "goesimage is defined" }
       #  - { role: syncthing, tags: ['syncthing'], when: "syncthing is defined" }
       #  - { role: mirrorlist, tags: ['mirrorlist'], when: "mirrorlist is defined" }
